[build-system]
requires = ["scikit-build-core[pyproject]>=0.8.0", "nanobind>=1.9.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pypopsift"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cupy-cuda12x>=13.5.1",
    "numpy>=2.3.1",
    "pillow>=11.3.0",
]

[project.optional-dependencies]
test = ["pytest>=8.4.1", "pytest-cov>=5.0.0"]
dev = ["pytest>=8.4.1", "pytest-cov>=5.0.0", "black>=24.0.0", "ruff>=0.3.0"]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"

[tool.scikit-build.wheel]
py-api = "cp312"
